[package]
name = "dnstp-client"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnstplib = { path = "../dnstp" }
clap = { version = "4.5.11", features = ["derive"] }
log = "0.4.22"
simplelog = "0.12.2"
rand = "0.8.5"
base64 = "0.22.1"