[package]
name = "dnstp"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnstplib = { path = "../dnstp" }
clap = { version = "4.5.11", features = ["derive"] }
log = { version = "0.4.22", features = [] }
simplelog = "0.12.2"