[package]
name = "dnstp"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnstplib = { path = "../dnstp" }
clap = { version = "4.5.11", features = ["derive"] }
log = { version = "0.4.22", features = [] }
simplelog = "0.12.2"