[package]
name = "dnstplib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
urlencoding = "2.1.3"

rand_core = { version = "0.6.4", features = ["getrandom"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
aes-gcm-siv = "0.11.1"