[package]
name = "dnstplib"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2021"
publish = ["sargit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
urlencoding = "2.1.3"

rand_core = { version = "0.6.4", features = ["getrandom"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"